Bug 498529 - enabling krdp from systemsettings does not work
Summary: enabling krdp from systemsettings does not work
Status: RESOLVED FIXED
Alias: None
Product: KRdp
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 6.3.5
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-01-11 13:41 UTC by slartibart70
Modified: 2025-08-19 13:45 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description slartibart70 2025-01-11 13:41:27 UTC
I am using krdpserver successfully on commandline and can connect to the machine using e.g. xfreerdp
server:  krdpserver -u username -p xxx --quality 100

There is also a systemsettings page called 'remote desktop' where we can define user and enable the server using a UI-toggle.
see also: https://invent.kde.org/plasma/krdp/-/blob/master/README.md

But, the server presumably never starts when toggling this in the UI?
(contrast this to running directly on commandline, then all is fine)

Moreover, i am missing feedback from the server-side, like e.g. having access to the logs from the ui to figure out any problems.
(this is more of an enhancement, but a welcome one...)
Comment 1 Mike Smith 2025-01-24 05:57:15 UTC
(In reply to slartibart70 from comment #0)
> I am using krdpserver successfully on commandline and can connect to the
> machine using e.g. xfreerdp
> server:  krdpserver -u username -p xxx --quality 100
> 
> There is also a systemsettings page called 'remote desktop' where we can
> define user and enable the server using a UI-toggle.
> see also: https://invent.kde.org/plasma/krdp/-/blob/master/README.md
> 
> But, the server presumably never starts when toggling this in the UI?
> (contrast this to running directly on commandline, then all is fine)
> 
> Moreover, i am missing feedback from the server-side, like e.g. having
> access to the logs from the ui to figure out any problems.
> (this is more of an enhancement, but a welcome one...)

That is strange it works for me. Though the behavior of the server is not consistent. Sometimes the server when a client connects to it will popup a dialog asking for permission for remote access, sometimes it just works without the interactive user having to allow. 

I agree access to the logs from the ui to figure out any problems would rock +1 for sure.

Sorry not much help but for the server logs can you try running: journalctl --user-unit=plasma-krdp_server 

I think that should produce the logs you are looking for.
Comment 2 Prajna Sariputra 2025-03-07 06:07:46 UTC
I'm also running into this issue with Plasma 6.3.2 on Arch Linux, and I'm quite sure the GUI toggle worked just fine in either 6.1.x or 6.2.x before. If I monitor the output of  "journalctl -f" the only message I get is "Toggling KRDP server to true over QDBus" and nothing else actually happens.

That said, it looks like running "systemctl --user enable app-org.kde.krdpserver.service" is enough to make the GUI switch to turn on/off KRdp work for me, but turning on autostart from the GUI or the aforementioned systemctl command doesn't work with the error message "job deleted to avoid ordering cycle" from systemd.
Comment 3 Prajna Sariputra 2025-03-18 03:47:21 UTC
Oh, turns out the issue I was running into is actually https://bugs.kde.org/show_bug.cgi?id=500017, which is now fixed with KDE Plasma 6.3.3.
Comment 4 John Kizer 2025-04-13 05:00:16 UTC
For the bug reporter - could you please double-check if you are still experiencing the issue on Plasma 6.3.3 or later? (Thanks Prajna for the reference to that!)
Comment 5 Michal Hlavac 2025-04-15 17:12:55 UTC
Can confirm this behaviour on plasma 6.3.4 
Using latest openSUSE Tumbleweed and turning checkbox "Enable RDP Server" do nothing.

systemctl --user status app-org.kde.krdpserver.service
○ app-org.kde.krdpserver.service - KRDP Server
     Loaded: loaded (/usr/lib/systemd/user/app-org.kde.krdpserver.service; disabled; preset: disabled)
     Active: inactive (dead)
Comment 6 Michal Hlavac 2025-04-15 17:22:57 UTC
If the checkbox "Autostart on login" is enabled, it works, otherwise it doesn't work.
Comment 7 Ilia Kats 2025-07-05 16:32:41 UTC
I think this is because the systemd unit file got renamed from plasma-krdp_server.service to app-org.kde.krdpserver.service, but the corresponding code in https://invent.kde.org/plasma/krdp/-/blob/master/src/kcm/kcmkrdpserver.cpp?ref_type=heads#L33 was not changed.
Comment 8 Nate Graham 2025-08-19 13:45:28 UTC
Git commit 011198c63c1e23d3ce71166a62ca4be1a804d4c6 by Nate Graham, on behalf of Arnav Rawat.
Committed on 19/08/2025 at 13:45.
Pushed by ngraham into branch 'master'.

Change name of service used

The alias in the service spec isn't actually used, since the server is
almost never going to be enabled:

"Unit files may specify aliases through the Alias= directive in the
[Install] section. When the unit is enabled, symlinks will be created
for those names, and removed when the unit is disabled."

So just use the actual service name; there are no other consumers of
the alias (wouldn't have been able to use it anyways)

Fixes turning on the server from systemsettings
FIXED-IN: 6.5.0

M  +1    -1    server/SessionController.cpp
M  +0    -1    server/app-org.kde.krdpserver.service.in
M  +1    -1    src/kcm/kcmkrdpserver.cpp

https://invent.kde.org/plasma/krdp/-/commit/011198c63c1e23d3ce71166a62ca4be1a804d4c6