Change name of service used

The alias in the service spec isn't actually used, since the server is
almost never going to be enabled:

"Unit files may specify aliases through the Alias= directive in the
[Install] section. When the unit is enabled, symlinks will be created
for those names, and removed when the unit is disabled."

So just use the actual service name; there are no other consumers of
the alias (wouldn't have been able to use it anyways)

Fixes turning on the server from systemsettings

BUG: 498529
FIXED-IN: 6.5.0